[tool.poetry]
name = "asynchronise"
version = "0.1.0"
description = "Event dispatch + async generators"
authors = ["ckoshka"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
typeguard = "2.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
