[metadata]
name = asynchronise
version = 0.0.2
author = ckoshka
description = Event dispatch + async generators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckoshka/asynchronise

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src